--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         width: 200px;
         height: 100px;
         position: relative;
+        /*transform: translateY(50px);*/
         transform: rotateY(180deg);
       }
 
