--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<Html>
   <head>
     <title>Web Development</title>
     <!-- meta data, title, style, script -->
@@ -541,6 +541,10 @@
       console.log(sessionStorage.getItem('sessioncourse'))
       sessionStorage.removeItem('sessioncourse');
       sessionStorage.clear()
+
+      var a = 10;
+      document.write(a)
+      console.log(a)
 
     </script>
   </body>
